# mandelbrot-explorer

./: CMakeLists.txt  README.md
app/: mandelbrot_explorer.cpp  mandelbrot_renderer.cpp  state_manager.cpp  text_renderer.cpp
include/: mandelbrot_renderer.hpp  state_manager.hpp  text_renderer.hpp
test/: test_state_manager.cpp
